# evolve

./: CLAUDE.md  CMakeLists.txt  README.md
include/evolve/: genome.h  graph_gene.h  innovation.h  neat_operators.h  neat_operators.inl  neat_policy.h  neat_population.h  neat_population.inl  node_role.h  population.h  structured_genome.h
src/: genome.cpp  innovation.cpp  population.cpp  structured_genome.cpp
tests/: CMakeLists.txt  genome_test.cpp  innovation_test.cpp  neat_operators_test.cpp  neat_population_test.cpp  population_test.cpp  structured_genome_test.cpp
